// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwappableCurrencyInput ERC721: matches snapshot: nft 1`] = `
<DocumentFragment>
  <div
    class="mm-box mm-box--margin-left-auto"
  >
    <p
      class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
    >
      [tokenId]
    </p>
    <p
      class="mm-box mm-text mm-text--body-sm mm-text--font-weight-bold mm-box--margin-left-10 mm-box--color-text-default"
    >
      1234
    </p>
  </div>
</DocumentFragment>
`;

exports[`SwappableCurrencyInput native: matches snapshot: native 1`] = `
<DocumentFragment>
  <div
    class="unit-input asset-picker-amount__input"
  >
    <div
      class="unit-input__inputs"
    >
      <div
        class="unit-input__input-container"
        style="display: inherit;"
        title="0.00000000000002048"
      >
        <input
          class="unit-input__input"
          data-testid="currency-input"
          dir="ltr"
          placeholder="0"
          style="width: 19ch;"
          type="number"
          value="0"
        />
        <div
          class="unit-input__suffix"
        >
          ETH
        </div>
      </div>
      <div
        class="currency-input__conversion-component"
      >
        [noConversionRateAvailable]
      </div>
    </div>
    <button
      aria-label="[switchInputCurrency]"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-lg"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/swap-vertical.svg');"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`SwappableCurrencyInput token: matches snapshot: token 1`] = `
<DocumentFragment>
  <div
    class="unit-input asset-picker-amount__input"
  >
    <div
      class="unit-input__inputs"
    >
      <div
        class="unit-input__input-container"
        style="display: inherit;"
        title="0.00000000000002048"
      >
        <input
          class="unit-input__input"
          data-testid="currency-input"
          dir="ltr"
          placeholder="0"
          style="width: 19ch;"
          type="number"
          value="0"
        />
        <div
          class="unit-input__suffix"
        >
          TOKEN
        </div>
      </div>
      <div
        class="currency-input__conversion-component"
      >
        [noConversionRateAvailable]
      </div>
    </div>
    <button
      aria-label="[switchInputCurrency]"
      class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-lg"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/swap-vertical.svg');"
      />
    </button>
  </div>
</DocumentFragment>
`;
